--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,6 @@ org.gradle.daemon=false
 	loader_version=671a1bb
 
 # Mod Properties
-	mod_version = 1.0-SNAPSHOT
+	mod_version = 1.1
 	maven_group = kz.chesschicken
 	archives_base_name = RuBetaEssentials
